--- a/web.config
+++ b/web.config
@@ -4,7 +4,15 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="UOFConnectionString" connectionString="Data Source=BPMSVR;Initial Catalog=UOF;Persist Security Info=True;User ID=sa;Password=Jinud-98A"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+      </assemblies>
+    </compilation>
   </system.web>
 </configuration>
