--- a/web.config
+++ b/web.config
@@ -5,13 +5,13 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="UOFConnectionString" connectionString="Data Source=BPMSVR;Initial Catalog=UOF;Persist Security Info=True;User ID=sa;Password=Jinud-98A"
-      providerName="System.Data.SqlClient" />
+    <add name="UOFConnectionString" connectionString="Data Source=BPMSVR;Initial Catalog=UOF;Persist Security Info=True;User ID=sa;Password=Jinud-98A" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
   </system.web>
